--- a/WheelChef(Chef)/app/build.gradle
+++ b/WheelChef(Chef)/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+repositories { maven { url "https://oss.sonatype.org/content/repositories/snapshots" } }
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -28,7 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.code.ksoap2-android:ksoap2-android:3.5.0'
-    compile 'com.github.rey5137:material:1.2.1'
+    compile 'com.github.rey5137:material:1.2.1.6-SNAPSHOT'
     compile 'com.pkmmte.view:circularimageview:1.1'
     compile 'com.mxn.soul:flowingdrawer-core:1.2.0'
     compile 'com.android.support:design:23.0.1'
