--- a/WheelChef(Chef)/app/src/main/AndroidManifest.xml
+++ b/WheelChef(Chef)/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".registerlogin.RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
+        <activity
+            android:name=".dish.CreateDishActivity"
+            android:label="@string/title_activity_create_dish" >
+        </activity>
 
     </application>
 
