--- a/WheelChef(Chef)/app/src/main/AndroidManifest.xml
+++ b/WheelChef(Chef)/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:supportsRtl="true"
-                 android:theme="@style/AppTheme">
+                 android:theme="@style/AppTheme"
+                 android:hardwareAccelerated="true"
+                 android:largeHeap="true">
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name">
