--- a/WheelChef(Chef)/app/build.gradle
+++ b/WheelChef(Chef)/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     }
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.4'
+    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
 }
